# MaladIF

./: .gitignore  CLI.cpp  CLI.h  CMakeLists.txt  Database.cpp  Database.h  Diagnosis.h  FileReader.cpp  FileReader.h  Fingerprint.h  Metadata.h  README.md  main.cpp
include/: CLI.h  CLI_utils.h  Database.h  Diagnosis.h  FileReader.h  Fingerprint.h
src/: CLI.cpp  CMakeLists.txt  Database.cpp  FileReader.cpp  main.cpp
tests/: CMakeLists.txt  diseases.txt  generateRandomData.py  generateRandomMetadata.py  metatadataTest.txt  simple.cpp  test.txt
tests/TU1/: CMakeLists.txt  TU1.cpp  bad_metadata1.txt
tests/TU2/: CMakeLists.txt  TU2.cpp  metadata3.txt
tests/TU3/: CMakeLists.txt  TU3.cpp
tests/TU4/: CMakeLists.txt  TU4.cpp
tests/TU5/: CMakeLists.txt  TU5.cpp
tests/data/: data1.txt  data_bad1.txt  data_bad2.txt  data_bad3.txt  diagnosis2.txt  diagnosis_bad1.txt  diagnosis_bad2.txt  diagnosis_bad3.txt  diagnosis_bad4.txt  metadata2.txt  metadata4.txt  metadata_bad1.txt  metadata_bad2.txt  metadata_bad3.txt
